packages/typ/tests/fixtures/diagnostics/0131_adt_recursive_tree_payload_mismatch_01.ml.expected
File "0131_adt_recursive_tree_payload_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0131_adt_recursive_tree_payload_mismatch_01 is not a valid module name.

File "0131_adt_recursive_tree_payload_mismatch_01.ml", line 5, characters 26-30:
5 |   Node_alpha (Leaf_alpha, true, Leaf_alpha)
                              ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
